--- a/style.css
+++ b/style.css
@@ -95,9 +95,9 @@ label {
 	width: 350px;
 }
 
-/* ===== Episode Card s ===== */
+/* ===== Episode Cards ===== */
 section {
-	border: solid;
+	border: 3px solid black;
 	padding: 10px;
 	scroll-margin-top: 120px;
 	display: flex;
